fix error in hero section tablet mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -418,7 +418,7 @@ Funding Section styling
 
   .main-wrapper {
     grid-template-columns: 3fr 2fr;
-    /* grid-template-rows: 1fr 1fr; */
+    grid-template-rows: 1fr 1fr;
     grid-gap: 0.5em;
   }
 
@@ -459,6 +459,4 @@ Funding Section styling
   .news {
     grid-template-columns: 1fr;
   }
-    
-
 }
